--- a/notebooks/jupyter/ERL19/Descriptives.ipynb
+++ b/notebooks/jupyter/ERL19/Descriptives.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,156 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>osm_id</th>\n",
-       "      <th>FID</th>\n",
-       "      <th>country</th>\n",
-       "      <th>city</th>\n",
-       "      <th>osm_type</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>PopTot</th>\n",
-       "      <th>aez_class</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>89369215</td>\n",
-       "      <td>5382</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Tamanrasset</td>\n",
-       "      <td>town</td>\n",
-       "      <td>22.785454</td>\n",
-       "      <td>5.532446</td>\n",
-       "      <td>3.091468e+04</td>\n",
-       "      <td>Tropic - cool / arid</td>\n",
-       "      <td>POLYGON ((5.512930562910484 22.80475188764244,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>252600742</td>\n",
-       "      <td>624</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Boumerdès</td>\n",
-       "      <td>town</td>\n",
-       "      <td>36.758882</td>\n",
-       "      <td>3.470596</td>\n",
-       "      <td>4.041199e+06</td>\n",
-       "      <td>Subtropic - warm / subhumid</td>\n",
-       "      <td>POLYGON ((2.960095682991406 36.82071885667166,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>253167052</td>\n",
-       "      <td>195</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Thenia</td>\n",
-       "      <td>town</td>\n",
-       "      <td>36.724986</td>\n",
-       "      <td>3.556935</td>\n",
-       "      <td>2.767512e+04</td>\n",
-       "      <td>Subtropic - warm / subhumid</td>\n",
-       "      <td>POLYGON ((3.610972972741118 36.75033076389462,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>253167208</td>\n",
-       "      <td>150</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Zemmouri</td>\n",
-       "      <td>town</td>\n",
-       "      <td>36.786406</td>\n",
-       "      <td>3.601221</td>\n",
-       "      <td>2.016720e+04</td>\n",
-       "      <td>Subtropic - warm / subhumid</td>\n",
-       "      <td>POLYGON ((3.555512812300016 36.81191901602259,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>253291208</td>\n",
-       "      <td>436</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Lakhdaria</td>\n",
-       "      <td>town</td>\n",
-       "      <td>36.563944</td>\n",
-       "      <td>3.596907</td>\n",
-       "      <td>4.186613e+04</td>\n",
-       "      <td>Subtropic - warm / subhumid</td>\n",
-       "      <td>POLYGON ((3.548917172615572 36.58325611006445,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>253292622</td>\n",
-       "      <td>257</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Draâ Ben Khedda</td>\n",
-       "      <td>town</td>\n",
-       "      <td>36.733332</td>\n",
-       "      <td>3.958769</td>\n",
-       "      <td>3.400638e+05</td>\n",
-       "      <td>Subtropic - warm / subhumid</td>\n",
-       "      <td>POLYGON ((3.842424792309737 36.82951907750196,...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      osm_id   FID  country             city osm_type        lat       lon  \\\n",
-       "0   89369215  5382  Algeria      Tamanrasset     town  22.785454  5.532446   \n",
-       "1  252600742   624  Algeria        Boumerdès     town  36.758882  3.470596   \n",
-       "2  253167052   195  Algeria           Thenia     town  36.724986  3.556935   \n",
-       "3  253167208   150  Algeria         Zemmouri     town  36.786406  3.601221   \n",
-       "4  253291208   436  Algeria        Lakhdaria     town  36.563944  3.596907   \n",
-       "5  253292622   257  Algeria  Draâ Ben Khedda     town  36.733332  3.958769   \n",
-       "\n",
-       "         PopTot                    aez_class  \\\n",
-       "0  3.091468e+04         Tropic - cool / arid   \n",
-       "1  4.041199e+06  Subtropic - warm / subhumid   \n",
-       "2  2.767512e+04  Subtropic - warm / subhumid   \n",
-       "3  2.016720e+04  Subtropic - warm / subhumid   \n",
-       "4  4.186613e+04  Subtropic - warm / subhumid   \n",
-       "5  3.400638e+05  Subtropic - warm / subhumid   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((5.512930562910484 22.80475188764244,...  \n",
-       "1  POLYGON ((2.960095682991406 36.82071885667166,...  \n",
-       "2  POLYGON ((3.610972972741118 36.75033076389462,...  \n",
-       "3  POLYGON ((3.555512812300016 36.81191901602259,...  \n",
-       "4  POLYGON ((3.548917172615572 36.58325611006445,...  \n",
-       "5  POLYGON ((3.842424792309737 36.82951907750196,...  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "GHS2000.head(6)"
    ]
@@ -364,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +252,7 @@
     "    'Central African Republic',\n",
     "    'Chad',\n",
     "    'Congo-Brazzaville',\n",
-    "    'Congo-Kinshasa',\n",
+    "    'Democratic Republic of the Congo', # Democratic Republic of the Congo needs to be used, not Congo-Kinshasa\n",
     "    'Equatorial Guinea',\n",
     "    'Gabon',\n",
     "    'Sao Tome and Principe'], 'Middle_Africa')\n",
@@ -432,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,40 +411,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1---WP2015---\n",
-      "3854\n",
-      "2616\n",
-      "2411\n",
-      "2---LS2015---\n",
-      "5598\n",
-      "4217\n",
-      "3801\n",
-      "3---WPE2016---\n",
-      "5552\n",
-      "4347\n",
-      "3643\n",
-      "4---GHS2015---\n",
-      "6229\n",
-      "5026\n",
-      "4162\n",
-      "5---GHS2000---\n",
-      "5854\n",
-      "4951\n",
-      "3858\n",
-      "6---WP2000---\n",
-      "3152\n",
-      "2259\n",
-      "2061\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Drop Duplicate FIDs (Polygons) and <5000 people \n",
     "\n",
@@ -668,29 +490,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Arid', 'Semi-arid', 'Sub-humid', 'Humid', 'NA'], dtype=object)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "WP2015.rain_zone.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,23 +515,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5770211.521161437\n",
-      "3974446.5933306217\n",
-      "3445686.148130417\n",
-      "3012814.759683758\n",
-      "2251999.9842593074\n",
-      "1352429.253856659\n",
-      "84495435.74569127\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# GHS 2015 Arid Chunks \n",
     "GHS2015_arid_50k = GHS2015_arid.loc[(GHS2015_arid['PopTot'] <= 5*10**4), 'PopTot'].sum()\n",
@@ -747,23 +544,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22887255.830865383\n",
-      "13523285.991266012\n",
-      "14757975.32088276\n",
-      "6357784.566317558\n",
-      "14059697.816293955\n",
-      "58506450.84650712\n",
-      "25704383.67055829\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# GHS Semi Arid Chunks \n",
     "GHS2015_semi_50k = GHS2015_semi.loc[(GHS2015_semi['PopTot'] <= 5*10**4), 'PopTot'].sum()\n",
@@ -790,23 +573,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23833664.20226693\n",
-      "16092062.637963295\n",
-      "23186649.741491795\n",
-      "10931440.236400746\n",
-      "7528483.759854794\n",
-      "50175299.94110024\n",
-      "21692588.16485355\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# GHS Sub Humid Chunks \n",
     "GHS2015_sub_50k = GHS2015_sub.loc[(GHS2015_sub['PopTot'] <= 5*10**4), 'PopTot'].sum()\n",
@@ -833,25 +602,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4956823.65060091\n",
-      "8396471.130773902\n",
-      "21146655.479595184\n",
-      "19066332.963283062\n",
-      "15359295.456669688\n",
-      "4778291.196527004\n",
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# GHS Humid Chunks \n",
     "GHS2015_humid_50k = GHS2015_humid.loc[(GHS2015_humid['PopTot'] <= 5*10**4), 'PopTot'].sum()\n",
@@ -987,21 +742,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'GHS2000_arid_50k' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-73cdbb07becf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m arid_2000 = [GHS2000_arid_50k, GHS2000_arid_100k, GHS2000_arid_250k, GHS2000_arid_500k, GHS2000_arid_1m,\n\u001b[0m\u001b[1;32m      2\u001b[0m             GHS2000_arid_5m, GHS2000_arid_5mplus]\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0marid_2000_pct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marid_2000\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mGHS2000\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPopTot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'GHS2000_arid_50k' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "arid_2000 = [GHS2000_arid_50k, GHS2000_arid_100k, GHS2000_arid_250k, GHS2000_arid_500k, GHS2000_arid_1m,\n",
     "            GHS2000_arid_5m, GHS2000_arid_5mplus]\n",
@@ -1050,20 +793,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1.2,  0.8,  0.7,  0.6,  0.4,  0.3, 16.9])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "arid_2015 = [GHS2015_arid_50k, GHS2015_arid_100k, GHS2015_arid_250k, GHS2015_arid_500k, GHS2015_arid_1m,\n",
     "            GHS2015_arid_5m, GHS2015_arid_5mplus]\n",
@@ -1074,20 +806,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 4.6,  2.7,  2.9,  1.3,  2.8, 11.7,  5.1])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "semi_2015 = [GHS2015_semi_50k, GHS2015_semi_100k, GHS2015_semi_250k, GHS2015_semi_500k, GHS2015_semi_1m,\n",
     "            GHS2015_semi_5m, GHS2015_semi_5mplus]\n",
