--- a/notebooks/jupyter/ERL19/New_Raster_Mask.ipynb
+++ b/notebooks/jupyter/ERL19/New_Raster_Mask.ipynb
@@ -44,9 +44,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_data = '../../temp_data/'\n",
-    "raster_interim = '../../data/interim/'\n",
-    "raster_raw = '../../data/'"
+    "temp_data = '../../../temp_data/'\n",
+    "raster_interim = '../../../data/interim/'\n",
+    "raster_raw = '../../../data/'\n",
+    "downloads = '/Users/cascade/Downloads/'"
    ]
   },
   {
@@ -185,51 +186,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Polygons for >1500 ppl per km2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = 'AFR_PPP_2015_adj_v2_S_Sudan.tif'\n",
-    "raster = rasterio.open(raster_interim+file)\n",
-    "crs = raster.crs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'driver': 'GTiff',\n",
-       " 'dtype': 'float32',\n",
-       " 'nodata': -3.4028234663852886e+38,\n",
-       " 'width': 1803,\n",
-       " 'height': 1578,\n",
-       " 'count': 1,\n",
-       " 'crs': CRS({'init': 'epsg:4326'}),\n",
-       " 'transform': Affine(0.00833333329999305, 0.0, 22.182915824431404,\n",
-       "        0.0, -0.00833333329999305, 13.749583647628462)}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "raster.meta"
+    "### Connected Pixels 1500 - 300"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.getcwd()\n",
+    "os.chdir('/Users/cascade/Github/Pop-ERL//')\n",
+    "os.getcwd()\n",
+    "\n",
+    "from src import raster_funcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = 'LS15_w001001_Clip'\n",
+    "raster = rasterio.open('data/interim/'+file+'.tif')\n",
+    "crs = raster.crs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask300 = raster_mask(raster, 1, 300)\n",
+    "mask1500 = raster_mask(raster, 1, 1500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask1500c300 = raster_funcs.remove_isolated_pixels(mask1500, mask300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poly_gdf_1500c300 = raster_gpd(mask1500c300, raster, crs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print((poly_gdf_1500c300.head(6)))\n",
+    "print(len(poly_gdf_1500c300))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop first row, which is bounding box of Africa\n",
+    "poly_gdf_1500c300_drop = poly_gdf_1500c300.drop(poly_gdf_1500c300.index[0], axis = 0)\n",
+    "print((poly_gdf_1500c300_drop.head(6)))\n",
+    "print(len(poly_gdf_1500c300_drop))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poly_gdf_1500c300_drop.to_file(downloads+file+'_1500c300.shp', driver='ESRI Shapefile')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 300 ppl km2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,123 +320,6 @@
    "source": [
     "#write out polygons \n",
     "# poly_gdf300.to_file(temp_data+'AFR_PPP_2015_adj_v2_300.shp', driver='ESRI Shapefile')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Connected Pixels 1500 - 300"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "os.getcwd()\n",
-    "os.chdir('/Users/cascade/Github/NTL/')\n",
-    "os.getcwd()\n",
-    "\n",
-    "from src import raster_funcs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = 'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip_S_Sudan'\n",
-    "raster = rasterio.open('data/interim/'+file+'.tif')\n",
-    "crs = raster.crs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask300 = raster_mask(raster, 1, 300)\n",
-    "mask1500 = raster_mask(raster, 1, 1500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask1500c300 = raster_funcs.remove_isolated_pixels(mask1500, mask300)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "poly_gdf_1500c300 = raster_gpd(mask1500c300, raster, crs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                            geometry\n",
-      "0  POLYGON ((3628405.452556 81029.461868, 3628405...\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print((poly_gdf_1500c300.head(6)))\n",
-    "print(len(poly_gdf_1500c300))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                            geometry\n",
-      "1  POLYGON ((3548405.452556 87029.461868, 3549405...\n",
-      "2  POLYGON ((2496405.452556 1683029.461868, 24964...\n",
-      "3  POLYGON ((3473405.452556 89029.461868, 3474405...\n",
-      "4  POLYGON ((3505405.452556 87029.461868, 3506405...\n",
-      "5  POLYGON ((3463405.452556 89029.461868, 3465405...\n",
-      "6  POLYGON ((3517405.452556 89029.461868, 3517405...\n",
-      "2657\n"
-     ]
-    }
-   ],
-   "source": [
-    "# drop first row, which is bounding box of Africa\n",
-    "poly_gdf_1500c300_drop = poly_gdf_1500c300.drop(poly_gdf_1500c300.index[0], axis = 0)\n",
-    "print((poly_gdf_1500c300_drop.head(6)))\n",
-    "print(len(poly_gdf_1500c300_drop))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "poly_gdf_1500c300_drop.to_file('temp_data/'+file+'_1500c300.shp', driver='ESRI Shapefile')"
    ]
   }
  ],
