--- a/notebooks/jupyter/ERL19/OSM_Python_Query.ipynb
+++ b/notebooks/jupyter/ERL19/OSM_Python_Query.ipynb
@@ -124,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -588,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
