--- a/notebooks/jupyter/ERL19/Clean_Data.ipynb
+++ b/notebooks/jupyter/ERL19/Clean_Data.ipynb
@@ -353,17 +353,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# open files\n",
-    "out_data = 'GHS2000'\n",
+    "out_data = 'WP2015'\n",
     "\n",
     "file = out_data+'_polypoints_ALL.shp'\n",
     "#file = 'WP2015_1500c300_polypoints.shp'\n",
     "\n",
     "poly_all = gpd.read_file(ERLv2_data+file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "197"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "950-(len(poly_all[poly_all.osm_type == 'city']))"
    ]
   },
   {
@@ -505,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
